Fix scroll bounce on mobile

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -12,10 +12,19 @@
 	--foreground: #ededed;
 }
 
+html {
+	height: 100%;
+}
+
 body {
 	color: var(--foreground);
 	background: var(--background);
 	font-family: Arial, Helvetica, sans-serif;
+	height: 100%;
+}
+
+body > div {
+	height: 100%;
 }
 
 @media screen and (max-width: 24rem) {
